objects/rrde__Round_Robin_Users__c.object
<CustomObject>
    <description>Round Robin users associated with users and Team</description>
    <fields>
        <fullName>rrde__Allowed_Number_of_Open_Cases__c</fullName>
        <inlineHelpText>There will be no limit to the number of open cases at any point of time is case no value for this field has been specified</inlineHelpText>
        <label>Allowed Number of Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Assigned_records_current_cycle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assigned records current cycle.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Assigned_records_current_cycle_front__c</fullName>
        <description>To display record assign limit at the page layout in read only form.</description>
        <formula>rrde__Assigned_records_current_cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned records current cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Case_Criteria__c</fullName>
        <formula>rrde__Team__r.rrde__Case_Criteria__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Complete_Target__c</fullName>
        <description>This Check box is use to check weather the user have assign the record up to their defined limit.
(Gul)</description>
        <formula>rrde__Assigned_records_current_cycle__c =  rrde__Record_assign_limit__c</formula>
        <label>Complete Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Is_Ready_to_Assign__c</fullName>
        <formula>rrde__Is_Active__c  &amp;&amp;  rrde__Is_Team_Active__c  &amp;&amp;  NOT(rrde__Complete_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Ready to Assign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Is_Team_Active__c</fullName>
        <formula>rrde__Team__r.rrde__Is_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Team Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Last_Case_Assigned_Date_time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Track when was last datetime when case was assigned to this user, Set it first time current time, when you are creating this first time.</description>
        <inlineHelpText>Track when was last datetime when case was assigned to this user, Set it first time current time, when you are creating this first time.</inlineHelpText>
        <label>Last Case Assigned Date time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Last_account_assigned_Date_Time__c</fullName>
        <label>Last account assigned Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Last_lead_assigned_Date_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Track when was last datetime when lead was assigned to this user, Set it first time current time, when you are creating this first time.</description>
        <inlineHelpText>Track when was last datetime when lead was assigned to this user, Set it first time current time, when you are creating this first time.</inlineHelpText>
        <label>Last lead assigned Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Last_opp_assigned_date_time__c</fullName>
        <label>Last opp assigned date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Lead_Criteria__c</fullName>
        <formula>rrde__Team__r.rrde__Lead_Criteria__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Previous_Assignment_Date_TimeView__c</fullName>
        <formula>rrde__Previous_Assignment_Datetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Assignment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Previous_Assignment_Datetime__c</fullName>
        <description>Track the old assignment Date time of user.</description>
        <inlineHelpText>Track the old assignment Date time of user.</inlineHelpText>
        <label>Previous Assignment Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Queue_Id__c</fullName>
        <formula>rrde__Team__r.rrde__Queue_Id__c</formula>
        <label>Queue Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Record_assign_limit__c</fullName>
        <description>This value defines the maximum number of records a user can be assigned which is set to unlimited when left blank</description>
        <inlineHelpText>This value defines the maximum number of records a user can be assigned which is set to unlimited when left blank</inlineHelpText>
        <label>Record assign limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Round_Robin_User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the User from Lookup to add in Round Robin User List</description>
        <inlineHelpText>Select the User from Lookup to add in Round Robin User List</inlineHelpText>
        <label>Round Robin User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Round_Robin_Users_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Round_Robin_User_Name_text__c</fullName>
        <description>Added to display the user name in text format and not ID so it is not clickable</description>
        <formula>if( rrde__Round_Robin_User_Name__c!=null, 
rrde__Round_Robin_User_Name__r.FirstName +&apos; &apos;+ rrde__Round_Robin_User_Name__r.LastName,
 rrde__Team__r.rrde__Queue_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RRD User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Team__c</fullName>
        <label>Team</label>
        <referenceTo>rrde__RRD_Teams__c</referenceTo>
        <relationshipLabel>Round Robin Users</relationshipLabel>
        <relationshipName>Round_Robin_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rrde__Team_s_Record_Type__c</fullName>
        <description>Capture the name of the team record type.</description>
        <formula>rrde__Team__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team&apos;s Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__To_be_assigned_records__c</fullName>
        <formula>IF( isblank(rrde__Allowed_Number_of_Open_Cases__c) , 
rrde__Record_assign_limit__c - rrde__Assigned_records_current_cycle_front__c, 

IF((rrde__Allowed_Number_of_Open_Cases__c - rrde__Total_Assigned_Cases__c )&gt;= 
(rrde__Record_assign_limit__c - rrde__Assigned_records_current_cycle__c), 
rrde__Record_assign_limit__c - rrde__Assigned_records_current_cycle__c, 
rrde__Allowed_Number_of_Open_Cases__c - rrde__Total_Assigned_Cases__c 
)
)</formula>
        <label>To be assigned records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Total_Assigned_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Open Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__Total_Assigned_Cases_f__c</fullName>
        <formula>rrde__Total_Assigned_Cases__c</formula>
        <label>Total Assigned Cases - Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrde__isNotRestricted__c</fullName>
        <description>Checks if the user is ready for assignment</description>
        <formula>IF(ISBLANK( rrde__Allowed_Number_of_Open_Cases__c), true, 

IF( rrde__Allowed_Number_of_Open_Cases__c &gt;  rrde__Total_Assigned_Cases__c , true, false)
)</formula>
        <label>isNotRestricted</label>
        <type>Checkbox</type>
    </fields>
    <label>Round Robin User</label>
    <nameField>
        <displayFormat>RRU-{0000}</displayFormat>
        <label>Round Robin User Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rrde__Record_assign_limit</fullName>
        <active>true</active>
        <errorConditionFormula>rrde__Record_assign_limit__c == 0  ||  rrde__Record_assign_limit__c &lt; rrde__Assigned_records_current_cycle__c ||
 rrde__Allowed_Number_of_Open_Cases__c &lt;
 rrde__Total_Assigned_Cases_f__c</errorConditionFormula>
        <errorDisplayField>rrde__Record_assign_limit__c</errorDisplayField>
        <errorMessage>Record assign limit should be greater than 0 and the number of assigned records in current cycle on Round Robin User.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rrde__User_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(rrde__Round_Robin_User_Name__c == null &amp;&amp; 
(rrde__Team__r.RecordType.Name ==&apos;Lead Criteria&apos; || rrde__Team__r.RecordType.Name ==&apos;Case Criteria&apos;))</errorConditionFormula>
        <errorDisplayField>rrde__Round_Robin_User_Name__c</errorDisplayField>
        <errorMessage>Please select Round Robin User</errorMessage>
    </validationRules>
</CustomObject>